--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 **/personal
+jugular_paraganglioma_classification.ipynb
 
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python,macos
