--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 **/personal
+**/private
 jugular_paraganglioma_classification.ipynb
+plan.txt
+junk.txt
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python,macos
