--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ jugular_paraganglioma_classification.ipynb
 plan.txt
 junk.txt
 
+**/data
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python,macos
